[FT:#6832] Add cursor for selectable alarms in GMA and OBA TableView component

--- a/GPCCHS_E_VIS/src/client/src/main/js/client/lib/viewManager/GroundAlarmView/Components/View/table/GroundAlarmTable.css
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/lib/viewManager/GroundAlarmView/Components/View/table/GroundAlarmTable.css
@@ -10,6 +10,10 @@
     border: 1px solid green;
   }
 
+  .selectable {
+    cursor: pointer;
+  }
+
   table {
     border-collapse: collapse;
   }
