--- a/GPCCHS_E_VIS/src/client/src/main/js/client/lib/viewManager/OnboardAlarmView/Components/View/table/OnboardAlarmTable.css
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/lib/viewManager/OnboardAlarmView/Components/View/table/OnboardAlarmTable.css
@@ -10,6 +10,10 @@
     border: 1px solid green;
   }
 
+  .selectable {
+    cursor: pointer;
+  }
+
   table {
     border-collapse: collapse;
   }
