--- a/GPCCHS_E_VIS/src/client/src/main/js/client/lib/viewManager/OnboardAlarmView/Components/View/table/OnboardAlarmTable.css
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/lib/viewManager/OnboardAlarmView/Components/View/table/OnboardAlarmTable.css
@@ -18,9 +18,12 @@
     border-collapse: collapse;
   }
 
+  th {
+    text-align: center;
+  }
+
   table, th, td {
     border: 1px solid black;
-    text-align: center;
   }
 
   th, td {
@@ -30,7 +33,6 @@
   td {
     overflow: hidden;
     text-overflow: ellipsis;
-    text-align: center;
     white-space: nowrap;
     min-width: 220px;
     max-width: 220px;
