[FT:#8520] Remove monitoring state colors mecanism + add defult values for state colors + update unit tests + fix issue when removing a state color + fix css code style

--- a/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/style/Editor.css
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/style/Editor.css
@@ -1,6 +1,8 @@
 @import './variables.css';
 
 .Editor {
+  background-color: var(--theme-light-2);
+
   .EditorVignette {
     width: 18px;
     height: 18px;
@@ -8,21 +10,28 @@
     transform: translateY(4px);
     border-radius: 2px;
   }
-  background-color: var(--theme-light-2);
+
   .nav-tabs {
-    li, li > a {
-      border-width: 0px;
+    li,
+    li > a {
+      border-width: 0;
     }
-    li.active, li.active > a:hover {
-      border-width: 0px;
+
+    li.active,
+    li.active > a:hover {
+      border-width: 0;
       /*background-color: var(--gray-light) !important;*/
     }
+
     li:not(.active) {
       background-color: var(--theme-main);
+
       & > a {
         color: var(--navTabText) !important;
       }
-      &:hover, & > a:hover {
+
+      &:hover,
+      & > a:hover {
         background-color: var(--theme-dark-2) !important;
       }
     }
