[FT:#5806] Little refacto on GroundAlarmTable.css .

--- a/GPCCHS_E_VIS/src/client/src/main/js/client/lib/viewManager/GroundAlarmView/Components/View/table/GroundAlarmTable.css
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/lib/viewManager/GroundAlarmView/Components/View/table/GroundAlarmTable.css
@@ -18,11 +18,7 @@
     max-width: 25px;
   }
 
-  th.collapseButton {
-    border-right: 1px solid black;
-  }
-
-  td.collapseButton {
+  th.collapseButton, td.collapseButton {
     border-right: 1px solid black;
   }
 
