[FT:#5806] Add a margin for Collapse button (OBA)

--- a/GPCCHS_E_VIS/src/client/src/main/js/client/lib/viewManager/OnboardAlarmView/Components/View/table/OnboardAlarmTable.css
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/lib/viewManager/OnboardAlarmView/Components/View/table/OnboardAlarmTable.css
@@ -14,12 +14,23 @@
     cursor: pointer;
   }
 
+  .collapseButton {
+    max-width: 25px;
+  }
+
+  th.collapseButton, td.collapseButton {
+    border-right: 1px solid black;
+  }
+
   .notAllowed {
     cursor: not-allowed;
   }
 
-  .hover {
+  .hover td, .hover th {
     filter: brightness(115%);
+    &.collapseButton {
+      border-right: 1px solid black;
+    }
   }
 
   table {
