[FT:#5806] Add children header title in GMA and OBA

--- a/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/style/AlarmView.css
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/style/AlarmView.css
@@ -28,9 +28,7 @@
 .AlarmView .alarmChildren th {
   border-color: #777777;
   background-color: #999999;
-  border-left: 0;
-  border-right: 0;
-  border-bottom: 0;
+  border: 0;
   color: var(--gray-darker);
 }
 
