[FT:#5806] Implement stateless TableView + use it for GMA

--- a/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/style/index.css
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/style/index.css
@@ -6,6 +6,7 @@
 @import './PlotView.css';
 @import './HistoryView';
 @import './AlarmView';
+@import './TableView';
 @import './Nav.css';
 @import './Timebar.css';
 @import './Editor.css';
