[FT:#6818] Fixing tooltip, x and y axis zones have pointer-events: auto.

--- a/GPCCHS_E_VIS/src/client/src/main/js/client/lib/viewManager/PlotView/Components/View/GrizzlyParametric/GrizzlyChart.css
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/lib/viewManager/PlotView/Components/View/GrizzlyParametric/GrizzlyChart.css
@@ -279,11 +279,14 @@
 .Zones{
   z-index: 8;
   position: absolute;
+  pointer-events: none;
   & > .ZonesYAxis{
     cursor: row-resize;
+    pointer-events: auto;
   }
   & > .ZonesXAxis{
     cursor: col-resize;
+    pointer-events: auto;
   }
   & > .ZonesAxis{
     position: absolute;
