--- a/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/common/TableView/TableView.css
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/lib/windowProcess/common/TableView/TableView.css
@@ -18,7 +18,7 @@
     max-width: 25px;
   }
 
-  span.collapseButton {
+  span.clickableMargin {
     background-color: transparent;
     cursor: pointer;
   }
@@ -35,6 +35,16 @@
     cursor: pointer;
     &:active {
       filter: brightness(115%);
+    }
+  }
+
+  th.filters {
+    & input {
+      text-align: center;
+      font-weight: normal;
+      border: none;
+      background-color: #999;
+      width: 100%;
     }
   }
 
